<resources>
    <string name="app_name">แอปพลิเคชั่นสำหรับผู้สูงอายุ</string>
    <string name="text_ep_pentor">เป็นต่อ EP.</string>

    <string name="hello_world">Hello world!</string>
    <string name="eat">การกิน</string>
    <string name="ex">ออกกำลัง</string>
    <string name="mon">สวดมนต์</string>
    <string name="news">ข่าวสาร</string>
    <string name="music">ฟังเพลง</string>
    <string name="movie">ดูหนัง</string>
    <string name="action_settings">Settings</string>
    <string name="imgcenter">imgcenter</string>
    <string name="text1">ยินดีต้อนรับครับ/ค่ะ</string>
    <string name="header">header</string>
    <string name="FoodIcon">foodBot</string>
    <string name="PicHeader">header</string>
    <string name="HeadEat">HeadEat</string>
    <string name="IconBack">IconBack</string>
    <string name="FastFood">fastFood</string>
    <string name="GoodFood">goodFood</string>
    <string name="HeaderEX">HeaderEX</string>
    <string name="Back">Back</string>
    <string name="IconClassOne">IconCassOne</string>
    <string name="IconClassTwo">IconClassTwo</string>
    <string name="IconClassTree">IconClassTree</string>
    <string name="TextDataOne">Squats</string>
    <string name="TextDataTwo">Wall Pushups</string>
    <string name="TextDataFour">Finger Marching</string>
    <string name="Data1">  เป็นการเพิ่มความแข็งแรงของ สะโพก กล้ามเนื้อต้นขา</string>
    <string name="Data1.1">กล้ามเนื้อก้น การขึ้นบัดไดจะลำบาก แต่หลังจากที่คุณออกกำลังได้สักระยะหนึ่งคุณจะเคลื่อนไหวได้ดีขึ้น</string>
    <string name="Data1.2">วิธีการออกกำลัง</string>
    <string name="TextDataThree">Toe Stands</string>
    <string name="Data1.2.1">1.ใช้เก้าอี้เป็นอุปกรณ์ในการออกกำลังกาย</string>
    <string name="Data1.2.2">2.ให้ยืนเท้าแยกจากกันกว้างประมาณไหล่ ยกแขนไปข้างหน้า</string>
    <string name="Data1.2.3">3.ย่อตัวลงเหมือนจะนั่งทำอย่างช้าๆ นับ 1–4 อย่างช้าๆ แต่ยังไม่ถึงกับนั่ง</string>
    <string name="Data1.2.4">4.หยุดพัก นับ 1–2 ช้า หลังจากนั้นยืนขึ้นมาอย่างช้าๆ ขาตรง หลังตรง</string>
    <string name="Data1.2.5">5.ให้ทำ 10 ครั้ง พัก 2 นาที และทำอีก 10 ครั้ง</string>
    <string name="Data1.3.1">1.การบริหารท่านี้จะเพิ่มความแข็งแรงของกล้ามเนื้อน่อง ข้อเท้า ทำให้การทรงตัวดีขึ้น</string>
    <string name="Data1.3.2">2.อาจจะยืนใกล้เคาเตอร์ หรือเก้าอี้ที่มีพนัก</string>
    <string name="Data1.3.3">3.ใช้มือจับเพื่อการทรงตัว แขย่งปลายเท้านับ 1–4</string>
    <string name="Data1.3.4">4.แล้วนับ1–4 ยืนกับพื้นท่าปกติ</string>
    <string name="Data1.3.5">5.ทำ 10 ครั้ง</string>
    <string name="Data1.4.1">1.รูปแรกนั่งบนเก้าอี้ ให้จิตนาการว่ามีกำแพงอยู่ข้างหน้า ใช้มือสองข้างไต่ขึ้นลงช้าๆ</string>
    <string name="Data1.4.2">2.รูปกลางมือไขว้หลังมือข้างหนึ่งจับข้อมืออีกข้างหนึ่งค่อยๆเลื่อนไปจับข้อศอกหรือสูงกว่านั้นเท่าที่คุณสามารถจะทำได้ค้างไว้ 10 วินาที</string>

    <string name="Data1.4.4">3.รูปทางขวา ประสานมือไว้ข้างหน้า เหยียดแขน หงายมือออก ค้างไว้ 10 วินาที</string>

    <string name="Data2.1.1">1.เลือกกำแพงที่ไม่มีอะไรแขวน และมีพื้นทีห่างจากผนัง</string>
    <string name="Data2.1.2">2.หันหน้าหากำแพง มือยันกำแพงระดับไหล</string>
    <string name="Data2.1.3">3.โน้มตัวหากำแพงช้า นับ 1–4</string>
    <string name="Data2.1.4">4.พัก นับ 1–2 แล้วดันตัวให้ยืนในท่ายืนตรง</string>
    <string name="Data2.1.5">5.ทำทั้งหมด 10 ครั้ง</string>
    <string name="Data2.1.6">6.ข้อสำคัญหลังต้องตรง</string>
    <string name="Data2.1">1.เป็นการบริหารกล้ามเนื้อต้นแขน สำหรับยกของ</string>
    <string name="Data2.2">2.มือทั้งสองข้างถือดัมเบลล์ หรืออาจจะหาสมุด หรือน้ำขวดก็ได้</string>
    <string name="Data2.3">3.นั่งบนเก้าอี้ หลังตรง เท้าวางบนพื้น กางเท้ากว้างเท่ากับไหล่ แขนว่งไว้ข้างลำตัว หันมือหาต้นขา</string>
    <string name="Data2.4">4.นับ2 ค่อยยกน้ำหนักเข้าหาตัว แขนแนบติดลำตัว</string>
    <string name="Data2.5">5.เมื่อถึงระดับไหล่ให้หยุดพัก</string>
    <string name="Data2.6">6.นับ1–4 ค่อยๆปล่อยแขนลงในท่าเดิม</string>
    <string name="Data2.7">7.ทำ 10 ครั้ง แล้วให้ทำซ้ำอีกครั้งหนึ่ง</string>
    <string name="TextTwoData.One">การยกกล้าม Biceps Curl</string>
    <string name="TextTwoData.Two">ขึ้นบัดได Step Ups</string>
    <string name="Data22.1">1.ยืนที่พื้น มือจับราวบันได</string>
    <string name="Data22.2">2.ก้าวเท้าขวาขึ้นบนบัดได มือจับราวเพื่อการทรงตัว เมื่อเริ่มก้าวขึ้นให้นับ1–2 ยกเท้าขึ้นช้าๆวางไว้ข้างเท้าขวา</string>
    <string name="Data22.3">3.ก้าวเท้าซ้ายลงโดยให้เท้าขวารับน้ำหนัก ตั้งแต่เริ่มก้าวเท้าซ้ายลงจนเท้าจรดพื้นให้นับ 1–4</string>
    <string name="Data22.4">4.ข้อสำคัญจุดที่รับน้ำหนักคือส้นเท้า</string>

    <string name="TextThreeData.One">การบริหารกล้ามเนื้อต้นขา Knee Extension</string>
    <string name="TextThreeData.Two">การบริหารกล้ามเนื้อต้นขาด้านหลัง Knee Curl</string>
    <string name="Data31.1">1.เป็นการบริหารกล้ามเนื้อต้นขา การบริหารท่านี้จะทำให้เข่าแข็งแรงขึ้น ลดอาการปวดข้อเข่า</string>
    <string name="Data31.2">2.ให้ใส่น้ำหนักที่ข้อเท้า</string>
    <string name="Data31.3">3.นั่งบนเก้าอี้ เท้าควรจะอยู่สูงจากพื้น หากเก้าอี้เตี้ยเกินไปให้หาเบาะเสริม</string>
    <string name="Data31.4">4.เท้ากว้างเท่าไหล่ ยกเท้าขึ้นช้าๆจนเข่าเหยียดตึงใช้เวลานับ 1–2 แล้วค้างไว้</string>
    <string name="Data31.5">5.ยกเท้าลงช้าๆใช้เวลานับ 1–4</string>
    <string name="Data31.6">6.ให้บริหารข้างละ 10 ครั้งเท่ากับ 1 เซต ทำทั้งหมด 2 เซต</string>
    <string name="Data32.1">1.ท่านี้เป็นการบริหารกล้ามเนื้อด้านหลังของขา เมื่อร่วมกับการบริหารท่าแรกจะทำให้การขึ้นบันไดดีขึ้น</string>
    <string name="Data32.2">2.หาน้ำหนักถ่วงที่ข้อเท้าทั้งสองข้าง</string>
    <string name="Data32.3">3.ยืนแยกเท้ากว้างระดับไหล่ มือจับพนักเก้าอี้เพื่อทรงตัว</string>
    <string name="Data32.4">4.ยกเท้าขวาข้นจนส้นเท้าติดก้น ใช้เวลานับ 1–2 แล้วค้างไว้สักครู่</string>
    <string name="Data32.5">5.ยกเท้าลงช้าๆจนกลับสู่ท่าเดิมโดยใช้เวลานับ 1–4</string>
    <string name="Data32.6">6.ให้ทำเท้าข้างละ 10 ครั้งเท่ากับ 1 เซต ให้ทำทั้งหมด 2 เซต</string>
    <string name="headcladone">headcladone</string>
    <string name="BeakFood">BeakFood</string>
    <string name="bacteat1">backeat1</string>
    <string name="sunday">sunday</string>
    <string name="satday">satday</string>
    <string name="friday">friday</string>
    <string name="organday">organday</string>
    <string name="organeday">organday</string>
    <string name="pinkday">pinkday</string>
    <string name="monday">monday</string>
    <string name="headeatone">headeatone</string>
    <string name="buttonplay">buttonplay</string>
    <string name="back">back</string>
    <string name="headermon">headermon</string>
    <string name="b3">b3</string>
    <string name="b2">b2</string>
    <string name="exit">exit</string>

    <string name="eat1">อาหารเช้า</string>
    <string name="eat1.1">ข้าวสวยหรือข้าวกล้อง 2 ทัพพี</string>
    <string name="eat1.2">ผัดผักบุ้งไฟแดง 1 ทัพพี</string>
    <string name="eat1.3">ปลานึ่งราดซีอิ้ว (2 ช้อนกินข้าว)</string>
    <string name="eat1.4">แก้วมังกร 6 ชิ้น </string>
    <string name="eat1.5">นมถั่วเหลืองไม่หวาน   หรือ นมพร่องมันเนย 1 แก้ว</string>

    <string name="eat2">อาหารกลางวัน</string>
    <string name="eat2.1">เกี้ยวน้ำ 1 ถ้วย </string>
    <string name="eat2.2">เต้าหู้นึ่ง (เต้าหู้อ่อน 1/2หลอด) </string>
    <string name="eat2.3">มะละกอสุก 6 ชิ้นคำ</string>

    <string name="eat3">อาหารเย็น</string>
    <string name="eat3.1">ข้าวสวยหรือข้าวกล้อง 2 ทัพพี </string>
    <string name="eat3.2">แกงจืดฟักไก่สับเห็ดหอม </string>
    <string name="eat3.3">น้ำพริกหนุ่ม ผักต้ม </string>
    <string name="eat3.4">ปลาดุกย่าง ½ ตัว </string>
    <string name="eat3.5">แตงโม 6 ชิ้นคำ</string>
    <string name="piceat1_1">piceat1.1</string>
    <string name="piceat1_2">piceat1.2</string>
    <string name="piceat1_3">piceat1.3</string>
    <string name="piceat1_4">piceat1.4</string>
    <string name="spansreen">spansreen</string>
    <string name="goodfood">gfood</string>
    <string name="breakfook">bfood</string>
    <string name="products">product</string>
    <string name="play">play</string>



    <declare-styleable name="TypefaceTextView">
        <attr name="customTypeface" format="string" />
    </declare-styleable>



</resources>
