<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LayoutMon">


    <ImageView
        android:id="@+id/headerEat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:contentDescription="@string/headermon"
        android:src="@drawable/headmon" />

    <ImageView
        android:id="@+id/b1"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_above="@+id/b2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/buttonplay"
         />

    <ImageView

        android:id="@+id/b2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/b2"
         />

    <ImageView
        android:id="@+id/b3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/b1"
        android:contentDescription="@string/b3"
         />

    <ImageView

        android:id="@+id/back"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="47dp"
        android:layout_toLeftOf="@+id/b3"
        android:layout_toStartOf="@+id/b3"

        android:contentDescription="@string/back"
        android:gravity="center_horizontal|center_vertical" />

    <ImageView
        android:id="@+id/pause"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/b2"
        android:layout_alignLeft="@+id/b3"
        android:layout_alignStart="@+id/b3" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="75dp"
        android:layout_height="62dp"
        android:layout_below="@+id/b2"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignStart="@+id/b2" />


</RelativeLayout>