<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollVieweat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:id="@+id/tabeat2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/piceat2.1"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/eat5"
                android:contentDescription="@string/piceat1_1" />

            <TextView
                android:id="@+id/eat1.1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/eat2.1" />

            <ImageView
                android:id="@+id/piceat2.2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/eat6"
                android:contentDescription="@string/piceat1_2" />

            <TextView
                android:id="@+id/eat1.2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/eat2.2" />

            <ImageView
                android:id="@+id/piceat2.3"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/eat7"
                android:contentDescription="@string/piceat1_3" />

            <TextView
                android:id="@+id/eat1.3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/eat2.3" />



            <ImageView
                android:id="@+id/backeat1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/bacteat1"
                android:src="@drawable/backicon" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>